attempt to fix the issue with white space on IE- overflow-x: hidden;

--- a/css/style.css
+++ b/css/style.css
@@ -112,7 +112,6 @@ section.white {
 
 #contact {
 padding-top: 8.5%;
-overflow-x: hidden;
 }
 
 .section.contact p {
